<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  >

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_my_services"
        android:icon="@drawable/ic_tools"
        android:title="@string/my_services"/>

<!--    <item-->
<!--        android:id="@+id/nav_add"-->
<!--        android:icon="@drawable/ic_batches"-->
<!--        android:title="@string/batches"/>-->

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"/>

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_outline_more_24"
        android:title="@string/more"/>



</menu>