<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="15dp"
    tools:context=".fragments.UserProfileFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        android:id="@+id/ivUser"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        />

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/tvCall"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/_12ssp"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:text="@string/call"
            android:textColor="@color/colorRed"
            app:drawableStartCompat="@drawable/ic_phone"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tvWhatsapp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/_12ssp"
            android:textAlignment="center"
            android:text="@string/whatsapp"
            android:padding="10dp"

            android:textColor="@color/colorGreen"
            app:drawableStartCompat="@drawable/ic_whatsapp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/owner_name"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            />
        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/email"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            />
        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/shop_address"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            />
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/business_description"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            />
        <TextView
            android:id="@+id/tvBusinessDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />
    </LinearLayout>



</LinearLayout>
</ScrollView>